# uplink-parse

./: LICENSE  pyproject.toml
src/uplink_parse/: _collector.py  converts.py  parse.py  strategy.py  utils.py
src/uplink_parse/strategies/: bytes.py  html_.py  json_.py  text_.py  xml_.py
